# lmmaster

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.en.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-build.bat  run-dev.bat  run-tests.bat
apps/desktop/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: bench.toml  catalog-refresh.toml  catalog.toml  chat-llama-cpp.toml  chat.toml  crash.toml  datasets.toml  gateway.toml  hf_search.toml  install.toml  keys.toml  knowledge.toml  model_pull.toml  path-tokens.toml  personas.toml  pipelines.toml  presets.toml  probe.toml  runtimes.toml  scan.toml  settings.toml  telemetry.toml  trends.toml  updater.toml  workbench.toml  workspace-portable.toml  workspace.toml  workspaces.toml
apps/desktop/src-tauri/src/: commands.rs  crash.rs  datasets.rs  gateway.rs  hf_meta.rs  hf_search.rs  knowledge.rs  lib.rs  main.rs  panic_hook.rs  path_tokens.rs  pipelines.rs  registry_fetcher.rs  registry_provider.rs  telemetry.rs  trends.rs  updater.rs  workbench.rs  workspaces.rs
apps/desktop/src-tauri/src/bench/: cache_store.rs  commands.rs  mod.rs  registry.rs
apps/desktop/src-tauri/src/chat/: llama_cpp.rs  mod.rs  registry.rs  remote.rs
apps/desktop/src-tauri/src/install/: llama_cpp_runtime.rs  mod.rs  registry.rs
apps/desktop/src-tauri/src/keys/: commands.rs  migrate.rs  mod.rs
apps/desktop/src-tauri/src/model_pull/: llama_cpp.rs  mod.rs  registry.rs
apps/desktop/src-tauri/src/personas/: dataset.rs  mod.rs  report.rs  sample.rs  survey.rs
apps/desktop/src-tauri/src/presets/: commands.rs  mod.rs
apps/desktop/src-tauri/src/runtimes/: commands.rs  mod.rs
apps/desktop/src-tauri/src/settings/: gateway.rs  hf_token.rs  llama_server.rs  mod.rs  models.rs  remote_endpoints.rs
apps/desktop/src-tauri/src/telemetry/: mod.rs  state.rs  submit.rs
crates/adapter-llama-cpp/: Cargo.toml
crates/adapter-llama-cpp/src/: lib.rs
crates/adapter-ollama/: Cargo.toml
crates/adapter-ollama/src/: lib.rs
crates/adapter-vllm/: Cargo.toml
crates/adapter-vllm/src/: lib.rs
crates/auto-updater/: Cargo.toml
crates/auto-updater/src/: error.rs  lib.rs  poller.rs  source.rs  version.rs
crates/auto-updater/tests/: integration_test.rs
crates/bench-harness/: Cargo.toml
crates/bench-harness/src/: adapter.rs  cache.rs  error.rs  lib.rs  runner.rs  types.rs  workbench_responder.rs
crates/core-gateway/: Cargo.toml
crates/core-gateway/src/: auth.rs  config.rs  lib.rs  openai_error.rs  pipeline_layer.rs  routes.rs  shutdown.rs  sse_chunk.rs  state.rs  upstream.rs  usage_log.rs
crates/core-gateway/src/routes/: admin.rs  chat.rs  embeddings.rs  health.rs  models.rs
crates/core-gateway/tests/: auth_test.rs  health_test.rs  routing_test.rs
crates/dataset-catalog/: Cargo.toml
crates/dataset-catalog/src/: format.rs  lib.rs  manifest.rs  safety.rs  validator.rs
crates/dataset-importer/: Cargo.toml
crates/dataset-importer/src/: chunker.rs  error.rs  lib.rs  parquet_stream.rs  pipeline.rs  service.rs  writer.rs
crates/hardware-probe/: Cargo.toml
crates/hardware-probe/src/: gpu.rs  lib.rs  linux.rs  mac.rs  sys.rs  types.rs  vulkan.rs  win.rs
crates/installer/: Cargo.toml
crates/installer/src/: action.rs  downloader.rs  error.rs  extract.rs  install_event.rs  install_runner.rs  lib.rs  progress.rs
crates/installer/tests/: download_test.rs  install_runner_test.rs
crates/key-manager/: Cargo.toml
crates/key-manager/src/: hash.rs  lib.rs  manager.rs  middleware.rs  plaintext.rs  scope.rs  store.rs
crates/knowledge-stack/: Cargo.toml
crates/knowledge-stack/src/: chunker.rs  embed.rs  embed_download.rs  embed_onnx.rs  error.rs  ingest.rs  lib.rs  store.rs
crates/knowledge-stack/tests/: integration_test.rs
crates/model-registry/: Cargo.toml
crates/model-registry/src/: cache.rs  category.rs  lib.rs  manifest.rs  recommender.rs  register.rs  sync.rs
crates/model-registry/tests/: recommender_test.rs
crates/pipelines/: Cargo.toml
crates/pipelines/src/: chain.rs  error.rs  lib.rs  observability.rs  pii_redact.rs  pipeline.rs  prompt_sanitize.rs  token_quota.rs
crates/pipelines/tests/: integration_test.rs
crates/portable-workspace/: Cargo.toml
crates/portable-workspace/src/: export.rs  fingerprint.rs  import.rs  lib.rs  manifest.rs  paths.rs  repair.rs
crates/preset-registry/: Cargo.toml
crates/preset-registry/src/: lib.rs
crates/preset-registry/tests/: loader_test.rs
crates/registry-fetcher/: Cargo.toml
crates/registry-fetcher/src/: cache.rs  error.rs  fetcher.rs  lib.rs  signature.rs  source.rs
crates/registry-fetcher/tests/: integration_test.rs
crates/runner-llama-cpp/: Cargo.toml
crates/runner-llama-cpp/src/: health.rs  lib.rs  port.rs  spawn.rs  stderr_map.rs
crates/runtime-detector/: Cargo.toml
crates/runtime-detector/src/: lib.rs  lm_studio.rs  manifest.rs  ollama.rs
crates/runtime-detector/tests/: probe_test.rs
crates/runtime-manager/: Cargo.toml
crates/runtime-manager/src/: lib.rs  manager.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: checks.rs  error.rs  lib.rs  llm_summary.rs  scheduler.rs  templates.rs
crates/scanner/tests/: integration_test.rs
crates/trend-summarizer/: Cargo.toml
crates/trend-summarizer/src/: error.rs  lib.rs  prompt.rs  summarizer.rs  types.rs
crates/trending-watcher/: Cargo.toml  README.md
crates/trending-watcher/src/: filter.rs  main.rs  report.rs  source.rs
crates/trends-bundle-curator/: Cargo.toml
crates/trends-bundle-curator/src/: bundle.rs  main.rs  source.rs
crates/workbench-core/: Cargo.toml
crates/workbench-core/src/: artifact_retention.rs  error.rs  eval.rs  flow.rs  jsonl.rs  lib.rs  lora.rs  lora_real.rs  modelfile.rs  quantize.rs  quantize_real.rs
crates/workbench-core/tests/: integration_test.rs
docs/: CHANGELOG.md  (+13 more)
workers/ml/: README.md  pyproject.toml
workers/ml/src/lmmaster_ml/: __init__.py  server.py
(+723 files in other folders)
