[package]
name = "adapter-llama-cpp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared-types.workspace = true
runtime-manager.workspace = true
runner-llama-cpp.workspace = true
adapter-ollama.workspace = true
# Phase R-E.2 (ADR-0057) — OpenAI compat DTO 공통화 (adapter-lmstudio와 공유).
openai-compat-dto.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
futures.workspace = true

[dev-dependencies]
wiremock.workspace = true
