[package]
name = "adapter-ollama"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared-types.workspace = true
runtime-manager.workspace = true
bench-harness.workspace = true
# Phase R-E.3 (ADR-0058) — chat 타입 공통화. 외부에서는 ollama::ChatMessage 그대로 import 가능 (re-export).
chat-protocol.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
wiremock = "0.6"
