[package]
name = "bench-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared-types.workspace = true
workbench-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
# Phase 5'.e — real HTTP wiring for WorkbenchResponder.
reqwest = { workspace = true, features = ["json"] }
backon.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
wiremock.workspace = true
