[package]
name = "model-registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared-types.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
