[package]
name = "runtime-detector"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared-types.workspace = true

# Phase 1A.4.b — 환경 점검 합성 함수
hardware-probe.workspace = true

# HTTP probing (Phase 1A.1)
reqwest = { workspace = true, features = ["json"] }
tokio.workspace = true

# serde
serde.workspace = true
serde_json.workspace = true

# error
anyhow.workspace = true
thiserror.workspace = true

# logging
tracing.workspace = true

# Phase 1A.2.b: manifest evaluator
which.workspace = true
regex.workspace = true

[target.'cfg(windows)'.dependencies]
winreg.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
wiremock = "0.6"
serde_json.workspace = true
tempfile = "3"
