[package]
name = "runtime-manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared-types.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
