[package]
name = "workbench-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true
time.workspace = true
# Phase 9'.b — llama-quantize / python binary auto-detect on PATH.
which.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
